Added a bunch of design changes from hospital to facilities and such stuff

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
-/.idea/navEditor.xml
+/.idea/
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+app/google-services.json
+
